[project]
name = "cot-swapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "datasets>=4.5.0",
    "flask>=3.1.2",
    "math-verify[antlr4-13-2]>=0.9.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformer-lens>=2.17.0",
]

typeCheckingMode = "basic"
