[project]
name = "cot-swapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=4.5.0",
    "math-verify[antlr4-13-2]>=0.9.0",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=4.52.0",
]

typeCheckingMode = "basic"
